syntax = "proto2";

package foundation;

message ComparedValue {
  optional string id = 1;
  optional string target_value_id = 2;
  optional string extracted_value_id = 3;
  optional float score = 4;
  optional string message = 5;
}

message ComparedValueCollection {
  optional string id = 1;
  repeated string compared_value_ids = 2;
}